2008-11-05  Michal Ludvig  <michal@logix.cz>

	* S3/S3.py, S3/Exception.py: Re-issue failed requests in S3.send_request()

2008-11-05  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Don't leak open filehandles in sync. Thx Patrick Linskey for report.
	* s3cmd: Re-raise the right exception.
	* s3cmd, S3/S3.py, S3/Exceptions.py: Don't abort 'sync' or 'put' on files
	  that can't be open (e.g. Permision denied). Print a warning and skip over
	  instead.
	* S3/S3.py: Escape parameters in strings. Fixes sync to and 
	  ls of directories with spaces. (Thx Lubomir Rintel from Fedora Project)

2008-11-05  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Unicode brainfuck again. This time force all output
	  in UTF-8, will see how many complaints we'll get...

2008-09-16  Michal Ludvig  <michal@logix.cz>

	* S3/PkgInfo.py: Bumped up version to 0.9.8.4
	* NEWS: Added 0.9.8.4

2008-09-16  Michal Ludvig  <michal@logix.cz>

	* Merge from trunk, revision 240:
	* S3/S3.py: Don't run into ZeroDivisionError when speed counter
	  returns 0s elapsed on upload/download file

2008-09-15  Michal Ludvig  <michal@logix.cz>

	* Merge from trunk, revision 238:
	* s3cmd, S3/S3.py, S3/Utils.py, S3/S3Uri.py, S3/Exceptions.py:
	  Yet anoter Unicode round. Unicodised all command line arguments 
	  before processing.

2008-09-15  Michal Ludvig  <michal@logix.cz>

	* Merge from trunk, revision 221:
	* s3cmd: Refuse 'sync' together with '--encrypt'.

2008-09-15  Michal Ludvig  <michal@logix.cz>

	* Merge from trunk, revisions 218, 226, 233, 234:
	* s3cmd, S3/S3.py, S3/Config.py: Allow access to upper-case
	  named buckets again with --use-old-connect-method 
	  (uses http://s3.amazonaws.com/bucket/object instead of
	  http://bucket.s3.amazonaws.com/object)
	* s3cmd, S3/S3.py, S3/Config.py: Removed --use-old-connect-method
	  again. Autodetect the need for old connect method instead.
	* S3/S3.py: "s3cmd mb" can create upper-case buckets again
	  in US. Non-US (e.g. EU) bucket names must conform to strict